--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+<!------------------------this file is for calculator which includes styles of it------------------------>
 button{
     width: 100px;
     height: 100px;
